--- a/src/index.css
+++ b/src/index.css
@@ -282,9 +282,14 @@ table > tbody > tr > td {
 }
 
 /**/
-.visualizar-campeonato {
+.resultado-campeonato, .visualizar-campeonato {
     text-align: center;
     margin-top: 20px;
+    background-color: white;
+    box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    margin: 20px 0;
+    padding: 20px;
 }
 
 .titulo-campeonato {
